<resources>
    <string name="app_name">Get List</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_phone">Phone</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_register_btn">Register</string>
    <string name="register_sign_in">Sign In</string>
    <string name="register_register_page_name"><u>Register</u></string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_login_btn">Login</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="login_page_name"><u>Login</u></string>
    <string name="login_forgot_password">Forgot Your Password?</string>
    <string name="list_item_listName">list Name:</string>
    <string name="main_Tv_InProcess"><u>In Process</u></string>
    <string name="main_Tv_WellDone">Well Done!</string>
    <string name="main_Tv_Done"><u>Done</u></string>
    <string name="main_Tv_YouNeedToDoSomeWork">You Need To do Some work!</string>
    <string name="addList_Tv_Add"><u>ADD LIST:</u></string>
    <string name="addList_Btn_add">ADD</string>
    <string name="Main_Btn_LogOut">Log Out</string>
    <string name="addList_Tv_Tasks"><u>Tasks:</u></string>
    <string name="addList_Tv_EnterListName">Enter List Name:</string>
    <string name="addList_Tv_EnterTask">Enter Task:</string>
    <string name="addList_Btn_AddList">Add List</string>
    <string name="dragList">dragList</string>
    <string name="Main_Tv_MyLists">My Lists</string>
    <string name="ToolBar_Iv_RefreshDB">ToolBarRefreshDB</string>
    <string name="ToolBar_Iv_UserLogOut">ToolBarLogOut</string>
    <string name="addMember_Tv_AddMemberToList">Add Member To List</string>
    <string name="addMember_Tv_AddMail"><U>Enter Email Member:</U></string>
    <string name="addMember_Ev_AddMail">Email</string>
    <string name="addMember_Switch_Read"><B>Read Only</B></string>
    <string name="addMember_Switch_Edit"><B>Edit</B></string>
    <string name="addMember_Tv_Permissions"><u>Permissions</u></string>
    <string name="addMember_Btn_AddMember">Add Member To List</string>
    <string name="addMember_Tv_ChoosePermissions">Choose Permissions For Member:</string>
</resources>