<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp">

        <ImageView
            android:id="@+id/Main_Textview_ToolBarLogOut"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:contentDescription="@string/ToolBar_Iv_UserLogOut"
            android:rotation="180"
            android:src="@drawable/ic_baseline_exit_to_app_24" />


        <TextView
            android:id="@+id/Main_Textview_ToolBarName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/Main_Textview_ToolBarRefreshDB"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/ToolBar_Iv_RefreshDB"
            android:src="@drawable/ic_baseline_refresh_24" />


    </RelativeLayout>

</RelativeLayout>