<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">

        <Button
            android:id="@+id/Main_Btn_AddList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Main_Btn_add" />

        <Button
            android:id="@+id/Main_Btn_LogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Main_Btn_LogOut" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="54"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Main_Tv_HeaderInProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/main_Tv_InProcess"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Main_Tv_InProcess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#cccccc"
                android:gravity="center"
                android:text="@string/main_Tv_WellDone"
                android:textSize="20sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Main_rv_InProcess"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#cccccc" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="54"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Main_Tv_HeaderDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/main_Tv_Done"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Main_rv_Done"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/Main_Tv_Done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#cccccc"
                android:gravity="center"
                android:text="@string/main_Tv_YouNeedToDoSomeWork"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>