<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="75dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AddList_Tv_AddTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/addList_Tv_Add"
                android:textColor="@color/brown"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/AddList_Tv_EnterListName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/addList_Tv_EnterListName"
                android:textColor="@color/brown"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/AddList_Et_AddListName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AddList_Tv_EnterTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/addList_Tv_EnterTask"
                android:textColor="@color/brown"

                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/AddList_Et_AddTask"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:inputType="text" />

                <Button
                    android:id="@+id/AddList_Btn_AddTask"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/brown"
                    android:text="@string/addList_Btn_add" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Main_Tv_HeaderInProcess_Task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/addList_Tv_Tasks"
                android:textColor="@color/brown"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Main_Tv_InProcess_Task"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/brown"
                android:gravity="center"
                android:text="@string/main_Tv_WellDone"
                android:textSize="20sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Main_rv_InProcess_Task"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/AddList_Btn_Finish"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3.3dp"
                android:backgroundTint="@color/brown"
                android:text="@string/addList_Btn_AddList"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_add_24"
                app:iconGravity="textStart" />
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>