<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@drawable/screen_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="75dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="15"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ShowList_Tv_AddTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/list_item_listName"
                android:textColor="@color/brown"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ShowList_Tv_EnterTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/addList_Tv_EnterTask"
                android:textColor="@color/brown"

                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ShowList_Et_AddTask"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ShowList_Btn_AddTask"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/brown"
                    android:text="@string/addList_Btn_add" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="65"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Main_Tv_HeaderInProcess_Task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/addList_Tv_Tasks"
                android:textColor="@color/brown"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Main_Tv_InProcess_Task"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/brown"
                android:gravity="center"
                android:text="@string/main_Tv_WellDone"
                android:textSize="20sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Main_rv_InProcess_Task"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>